# PPA2313

./: CMakeLists.txt  README.md
Year-1/Semester-1/Homework-1/: Exercise-1.cpp  Exercise-11.cpp  Exercise-13.cpp  Exercise-16.cpp  Exercise-2.cpp  Exercise-3.cpp  Exercise-4.cpp  Exercise-5.cpp  Exercise-6.cpp  Exercise-7.cpp
Year-1/Semester-1/Homework-10/: Exercise-1.cpp  Exercise-2.cpp  Exercise-3.cpp  Exercise-4.cpp  Exercise-5.cpp  Exercise-6.cpp  Exercise-7.cpp
Year-1/Semester-1/Homework-2/: Exercise-1.cpp  Exercise-2.cpp
Year-1/Semester-1/Homework-3/: Exercise-1.cpp  Exercise-10.cpp  Exercise-11.cpp  Exercise-12.cpp  Exercise-13.cpp  Exercise-14.cpp  Exercise-15.cpp  Exercise-16.cpp  Exercise-17.cpp  Exercise-2.cpp  Exercise-3.cpp  Exercise-4.cpp  Exercise-5.cpp  Exercise-6.cpp  Exercise-7.cpp  Exercise-8.cpp  Exercise-9.cpp
Year-1/Semester-1/Homework-4/: Exercise-1.cpp  Exercise-2.cpp  Exercise-3.cpp  Exercise-4.cpp  Exercise-5.cpp  Exercise-6.cpp
Year-1/Semester-1/Homework-5/: Exercise-1.cpp  Exercise-10.cpp  Exercise-11.cpp  Exercise-12.cpp  Exercise-13.cpp  Exercise-14.cpp  Exercise-2.cpp  Exercise-3.cpp  Exercise-4.cpp  Exercise-5.cpp  Exercise-6.cpp  Exercise-7.cpp  Exercise-9.cpp
Year-1/Semester-1/Homework-6/: Exercise-15.cpp  Exercise-16.cpp  Exercise-17.cpp  Exercise-18.cpp  Exercise-19.cpp  Exercise-20.cpp  Exercise-21.cpp  Exercise-22.cpp  Exercise-23.cpp  Exercise-24.cpp  Exercise-25.cpp  Exercise-26.cpp
Year-1/Semester-1/Homework-7/: Exercise-27.cpp  Exercise-28.cpp  Exercise-29.cpp  Exercise-30.cpp  Exercise-31.cpp  Exercise-32.cpp
Year-1/Semester-1/Homework-8/: Exercise-1.cpp  Exercise-2.cpp  Exercise-3.cpp  Exercise-4.cpp  Exercise-5.cpp  Exercise-6.cpp  Exercise-7.cpp  Exercise-8.cpp  Exercise-9.cpp
Year-1/Semester-1/Homework-9/: Exercise-1.cpp  Exercise-2.cpp  Exercise-3a.cpp  Exercise-3b.cpp  Exercise-3c.cpp  Exercise-4a.cpp  Exercise-4b.cpp  Exercise-4c.cpp  Exercise-5.cpp  Exercise-6.cpp  Exercise-7.cpp
Year-1/Semester-2/Homework-1/: Exercise-1.cpp  Exercise-10.cpp  Exercise-2.cpp  Exercise-3.cpp  Exercise-4.cpp  Exercise-5.cpp  Exercise-6.cpp  Exercise-7.cpp  Exercise-8.cpp  Exercise-9.cpp
Year-1/Semester-2/Homework-1/Data/: data-1.in  data-1.out  data-10.in  data-10.out  data-2.in  data-2.out  data-3.in  data-3.out  data-4.in  data-4.out  data-5.in  data-5.out  data-6.in  data-6.out  data-7.in  data-7.out  data-8.out  data-9.out
Year-1/Semester-2/Homework-10/headers/: drone.h  includes.h
Year-1/Semester-2/Homework-10/src/: drone.cpp  main.cpp  menu.cpp
Year-1/Semester-2/Homework-2/: Exercise-11.cpp  Exercise-12.cpp  Exercise-13.cpp  Exercise-14.cpp  Exercise-15.cpp  Exercise-16.cpp  Exercise-17.cpp  Exercise-18.cpp  Exercise-19.cpp  Exercise-20.cpp  Exercise-21.cpp  Exercise-22.cpp
Year-1/Semester-2/Homework-2/Data/: data-11.in  data-11.out  data-12.out  data-13.out  data-14.out  data-15.in  data-15.out  data-16.in  data-16.out  data-17.in  data-18.in  data-19.in  data-19.out  data-20.in  data-21.in  data-22.in
Year-1/Semester-2/Homework-3/: Exercise-1.1.cpp  Exercise-1.2.cpp  Exercise-1.3.cpp  Exercise-2.1.cpp  Exercise-2.2.cpp  Exercise-2.3.cpp  Exercise-3.cpp  Exercise-4.cpp  Exercise-5.cpp  Exercise-6.cpp  Exercise-7.cpp
Year-1/Semester-2/Homework-3/Data/: data-3.in  data-6.in  data-7.in
Year-1/Semester-2/Homework-4/: Exercise-1.cpp  Exercise-2.cpp  Exercise-3.cpp  Exercise-4.1.cpp  Exercise-4.2.cpp  Exercise-5.cpp  Exercise-6.cpp  Exercise-7.cpp
Year-1/Semester-2/Homework-4/Data/: data-6.in
Year-1/Semester-2/Homework-5/: Exercise-1.cpp  Exercise-2.cpp  Exercise-3.cpp  Exercise-4.cpp  Exercise-5.cpp  Exercise-6.cpp  Exercise-7.cpp  Exercise-8.cpp
Year-1/Semester-2/Homework-6/: Exercise-1.cpp  Exercise-2.cpp  Exercise-3.cpp
Year-1/Semester-2/Homework-7/: Exercise-1.cpp  Exercise-2.cpp  Exercise-3.cpp
Year-1/Semester-2/Homework-8/: Exercise-1.cpp  Exercise-2.cpp  Exercise-3.cpp
Year-1/Semester-2/Homework-9/: Exercise-1.cpp  Exercise-2.cpp  Exercise-3.cpp
